fixed footer sematic+spacing

--- a/Resources/CSS/accessibility.css
+++ b/Resources/CSS/accessibility.css
@@ -37,10 +37,16 @@
 
     }
 
-    footer span {
-        display: inline-block;
-         margin-left: 3rem;
+   
+
+    footer ul{
+        width: 16rem;
     }
+
+    
+.socialLink{
+    width: 71%;
+}
 
 }
 
